--- a/index.html
+++ b/index.html
@@ -787,19 +787,52 @@
             lightbox.style.display = 'flex';
         }
 
-        // 音乐交互
+        // 音乐交互与自动播放优化
         const musicBtn = document.getElementById('toggleMusic');
         const bgMusic = document.getElementById('bgMusic');
         const musicIcon = document.getElementById('musicIcon');
         let isPlaying = false;
+        let interactionTriggered = false;
 
-        musicBtn.addEventListener('click', () => {
+        function playMusic() {
+            if (!isPlaying && !interactionTriggered) {
+                bgMusic.play().then(() => {
+                    isPlaying = true;
+                    interactionTriggered = true;
+                    musicIcon.className = 'fas fa-pause text-primary-green text-sm text-glow';
+                }).catch(e => {
+                    console.log("Autoplay blocked, waiting for interaction.");
+                });
+            }
+        }
+
+        // 尝试初始播放（部分浏览器可能允许）
+        window.addEventListener('load', playMusic);
+
+        // 核心交互触发逻辑：首次点击、滚动或触摸即播放
+        const triggerEvents = ['mousedown', 'touchstart', 'scroll', 'keydown'];
+        const triggerPlay = () => {
+            if (!interactionTriggered) {
+                bgMusic.play().then(() => {
+                    isPlaying = true;
+                    interactionTriggered = true;
+                    musicIcon.className = 'fas fa-pause text-primary-green text-sm text-glow';
+                });
+                triggerEvents.forEach(e => window.removeEventListener(e, triggerPlay));
+            }
+        };
+        triggerEvents.forEach(e => window.addEventListener(e, triggerPlay, { once: true }));
+
+        // 手动开关逻辑
+        musicBtn.addEventListener('click', (e) => {
+            e.stopPropagation(); // 防止触发 window 的交互逻辑
             if (isPlaying) {
                 bgMusic.pause();
                 musicIcon.className = 'fas fa-play text-primary-green text-sm';
             } else {
                 bgMusic.play().catch(e => console.log(e));
                 musicIcon.className = 'fas fa-pause text-primary-green text-sm text-glow';
+                interactionTriggered = true; // 手动开启后不再由系统自动触发
             }
             isPlaying = !isPlaying;
         });
