--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
         </button>
         <audio id="bgMusic" loop preload="auto">
-            <source src="war_song_placeholder.mp3" type="audio/mpeg">
+            <source src="background_music.mp3" type="audio/mpeg">
         </audio>
     </div>
 
