--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>绿色黄金 V2.3 —— 廊坊农科院韭菜科技展示 (标准化交付版)</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="tailwind.js"></script>
     <script src="https://lib.baomitu.com/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://lib.baomitu.com/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <link
